force-app/main/default/objects/vlocity_cmt__AccountOffer__c/vlocity_cmt__AccountOffer__c.object-meta.xml
<CustomObject>
    <description>Account offer is a product or promotion offered to an account. Tracks the start date of the offer and the date of acceptance if this happens.</description>
    <label>Account Offer</label>
    <nameField>
        <label>Account Offer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Offers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>