force-app/main/default/objects/vlocity_cmt__AccountOffer__c/fields/vlocity_cmt__AccountId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The account to which the offer is made.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Offers</relationshipLabel>
    <relationshipName>AccountPromotions</relationshipName>
    <type>Lookup</type>
</CustomField>