force-app/main/default/objects/vlocity_cmt__AccountOffer__c/fields/vlocity_cmt__StatusChangeDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__StatusChangeDate__c</fullName>
    <description>Date of status change.</description>
    <label>Status Change Date</label>
    <type>Date</type>
</CustomField>